Fix box-shadow blur extending off of menu on mobile

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
         justify-content: center;
         align-items: center;
         overflow: hidden;
+        padding: 0;
     }
 }
 
